update about in link

--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: true
 contact_links:
   - name: Find in Telegram
     url: https://telegram.me/runPython_bot
-    about: run-py-bot
+    about: @runPython_bot
