--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-APScheduler==3.6.3
-certifi==2020.6.20
+aiodns==2.0.0
+aiogram==2.11.2
+aiohttp==3.7.2
+async-timeout==3.0.1
+attrs==20.3.0
+Babel==2.9.0
+cchardet==2.1.7
+certifi==2020.11.8
 cffi==1.14.3
-cryptography==3.2.1
-decorator==4.4.2
+chardet==3.0.4
+idna==2.10
+multidict==5.0.2
+pycares==3.1.1
 pycparser==2.20
-python-telegram-bot==13.0
 pytz==2020.4
-six==1.15.0
-tornado==6.1
-tzlocal==2.1
+PyYAML==5.3.1
+typing-extensions==3.7.4.3
+uvloop==0.14.0
+yarl==1.6.3
