--- a/requirements.txt
+++ b/requirements.txt
@@ -1,37 +1,20 @@
 aiodns==2.0.0
-aiofiles==0.6.0
 aiogram==2.11.2
-aiohttp==3.7.2
+aiohttp==3.7.3
 async-timeout==3.0.1
 attrs==20.3.0
-autopep8==1.5.4
 Babel==2.9.0
-blinker==1.4
+brotlipy==0.7.0
 cchardet==2.1.7
 certifi==2020.11.8
-cffi==1.14.3
+cffi==1.14.4
 chardet==3.0.4
-click==7.1.2
-h11==0.11.0
-h2==4.0.0
-hpack==4.0.0
-Hypercorn==0.11.1
-hyperframe==6.0.0
 idna==2.10
-itsdangerous==1.1.0
-Jinja2==2.11.2
-MarkupSafe==1.1.1
 multidict==5.0.2
-priority==1.3.0
 pycares==3.1.1
-pycodestyle==2.6.0
 pycparser==2.20
 pytz==2020.4
-PyYAML==5.3.1
-Quart==0.13.1
-toml==0.10.2
 typing-extensions==3.7.4.3
+ujson==4.0.1
 uvloop==0.14.0
-Werkzeug==1.0.1
-wsproto==1.0.0
 yarl==1.6.3
